# pr

./: .gitignore  Makefile  README.md  pr.py  pyproject.toml
tests/: conftest.py  test_automerge.py  test_branch.py  test_fetch.py  test_pure.py  test_rebase.py  test_render.py  test_state.py  test_target.py  test_update.py
tests/fake_gh/: gh
